B-F Backup Sandbox 30.4.12/src/objects/Article__c.object
<CustomObject>
    <description>An individual Knowledge Base article</description>
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <controllingField>Platform__c</controllingField>
            <picklistValues>
                <fullName>APEX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visual Force</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Formula</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ABAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web DynPro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASP</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <label>Platform</label>
        <picklist>
            <picklistValues>
                <fullName>.Net</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Force</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAP</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Proposed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deprecated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Article</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0}</displayFormat>
        <label>Article Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Articles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>